Update project for version 1.1.0
- Added PUBLISH.md for PyPI publishing instructions.
- Enhanced .gitignore to exclude additional test and output files.
- Updated pyproject.toml and setup.py to version 1.1.0.
- Removed demo.docx as it is no longer needed.
- Introduced new parsers for comments, footnotes, endnotes, styles, and charts to improve DOCX processing.
- Enhanced markdown conversion to support footnotes, endnotes, and improved heading detection.
- Updated README.md with new features and requirements.

--- a/.gitignore
+++ b/.gitignore
@@ -63,9 +63,19 @@ Thumbs.db
 # Project specific
 *.md
 !README.md
+!PUBLISH.md
 *.txt
 !LICENSE.txt
-demo.*
-!demo.docx
 test_without_install.sh
 images/
+test_images*/
+images_*/
+*_output.md
+test_output.md
+.env
+
+# Test files
+test_files/
+dist/
+bin/
+.venv/
