--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,11 @@ include LICENSE
 include README.md
 include pyproject.toml
 recursive-include docx2everything *.py
+
+# Exclude test files and output directories
+prune test_files
+prune test_images*
+prune images_*
+exclude *_output.md
+exclude test_output.md
+exclude test_all_features.py
